# NCITools

./: .buildinfo  .gitignore  LICENSE  README.md  index.html  installation.html  ncitools.geometry.html  ncitools.topology.html  objects.inv  pyproject.toml  pyvenv.cfg  searchindex.js
_modules/ncitools/: utils.html
_modules/ncitools/geometry/: geom.html
_modules/ncitools/io/: fixers.html
_sources/: index.rst.txt  ncitools.geometry.rst.txt  ncitools.io.rst.txt  ncitools.qc.rst.txt  ncitools.rst.txt  ncitools.topology.rst.txt
docs/source/: conf.py  index.rst  modules.rst  ncitools.rst
ncitools/: cli.py  constants.py  correlations.py  utils.py
ncitools/geometry/: geom.py
ncitools/io/: fixers.py  readers.py  writers.py
ncitools/old/: NCITools.py  QC_pyfock_version.py  core.py  hydrogens.py  read_tools_old.py
ncitools/qc/: dft.py
ncitools/topology/: bcp.py
tests/data/: H2CO.cube  water.xyz  water_dimer.nci  water_dimer.xyz  water_tetramer.nci  water_tetramer.xyz
