[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncitools"
version = "0.1.0"
description = "Non-covalent interaction analysis (H-bonds) from geometry or electron density"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "ase",
    "networkx",
    "tqdm",
    "click"
]

[project.optional-dependencies]
dft = ["pyscf"]
xtb = ["xtb-python"]
fix = ["pdbfixer", "openmm"]
all = ["pyscf", "xtb-python", "pdbfixer", "openmm"]

[project.scripts]
ncitools = "ncitools.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ncitools*"]